# finintel_run

./: .gitignore  HOW_TO_RUN.txt  README.md  main.py  pyproject.toml  requirements.txt  run.py
docs/: prompts.md
ingestion/: ai_mapper.py  dataset.py  field_config.py  field_mapper.py  file_reader.py  forecast_.py  ingest.py  normalizer.py  qa_engine.py  record_parser.py  risk_engine.py  text_parser.py  timesheet_parser.py
output/: Proofpoint - Timesheet for MARCH-2026.xlsx  TMV_Timesheet_March_2026.xlsx  sample_1_consulting_clean_result.json  sample_2_messy_realworld_result.json  sample_3_european_format_result.json  sample_4_days_format_result.json  sample_5_mixed_quality_result.json
qna/: README.md  config.py  documents.py  knowledge.py  loader.py  main.py  models.py  qa_agent.py  router.py  run.py  run_local.py  vector_store.py
sample_data/: Optium - Timesheet for MAR-JAN-2026.xlsx  Optium - Timesheet for MAY-2026.xlsx  Proofpoint - Timesheet for MARCH-2026.xlsx  TMV_Timesheet_March_2026.xlsx  projectX_Timesheet_April 2024.xlsx  projectX_Timesheet_December 2024.xlsx  projectX_Timesheet_February 2024.xlsx  projectX_Timesheet_January 2024.xlsx  projectX_Timesheet_July 2024.xlsx  projectX_Timesheet_June 2024.xlsx  projectX_Timesheet_March 2024.xlsx  projectX_Timesheet_May 2024.xlsx  projectY_Timesheet_April 2024.xlsx  projectY_Timesheet_February 2024.xlsx  projectY_Timesheet_January 2024.xlsx  projectY_Timesheet_July 2024.xlsx  projectY_Timesheet_June 2024.xlsx  projectY_Timesheet_March 2024.xlsx  projectY_Timesheet_May 2024.xlsx  sample_1_consulting_clean.csv  (+4 more)
(+82 files in other folders)
