[project]
name = "finintel-run"
version = "0.1.0"
requires-python = ">=3.13"
dependencies = [
    "chardet==5.2.0",
    "faiss-cpu==1.11.0.post1",
    "fastapi==0.115.12",
    "langchain==1.0.1",
    "langchain-community==0.3.31",
    "langchain-core==1.0.0",
    "ollama==0.6.0",
    "openpyxl==3.1.5",
    "pandas==2.2.3",
    "pdfplumber==0.11.7",
    "pydantic==2.11.4",
    "python-dotenv==1.1.0",
    "python-multipart==0.0.20",
    "uvicorn==0.34.2",
]
[tool.setuptools.packages.find]
include = ["ingestion*"]
exclude = ["output*", "sample_data*"]